Enhanced chat functionality with secure API key handling - Fixed API key mismatch between summary and chat - Moved API key to gitignored config.js file - Added config.example.js template for users - Simplified settings UI (removed API key fields) - Fixed chat bot to use provider-specific keys - Added .gitignore for security

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -20,7 +20,7 @@
   "content_scripts": [
     {
       "matches": ["*://*.youtube.com/*"],
-      "js": ["content/youtube-detector.js"],
+      "js": ["config.js", "content/youtube-detector.js"],
       "css": ["content/recap-overlay.css"],
       "run_at": "document_idle"
     }
