docs: Add setup guide and configuration templates
- Created SETUP.md with step-by-step installation instructions
- Added native_messaging_host.json.template for users to customize
- Added eye_monitor.bat.template for path configuration
- Updated .gitignore to exclude user-specific config files
- This makes the project portable for other users

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
 # API Configuration
 extension/config.js
 
+# User-specific configuration (created from templates)
+native_messaging_host.json
+eye_monitor.bat
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+.venv/
+venv/
+*.log
+
+# Lock files
+.eye_monitor.lock
+
 # Node modules
 node_modules/
 
